# swarm

./: .envrc  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  flake.nix  swarm.cabal
.git-crypt/keys/default/0/: 2BF013828C4B1CAA4D49F3DBBE609F66144CE9BF.gpg
deployment/: backend.nix  config.nix  swarm-service.nix
deployment/.lego/accounts/acme-v02.api.letsencrypt.org/admin+acme@swarmapp.org/: account.json
nix/morpheus-graphql-subscriptions/: monad_base_control.patch
secrets/: do-api-token  godaddy-api-creds  key.jks  swarm-90059-firebase-adminsdk-s0gjo-d9f876cb1e.json
site/: README.md  node-packages.nix  package.json  site.nix  tailwind.config.js
site/public/: .gitignore  index.html
src/: Main.hs
src/Auth/: Common.hs  Google.hs
src/Firebase/: CloudMessaging.hs
ui/: .firebaserc  .gitignore  README.md  pubspec.yaml
ui/android/: .gitignore  build.gradle  key.properties
ui/android/app/: build.gradle  google-services.json
ui/android/app/src/debug/: AndroidManifest.xml
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/profile/: AndroidManifest.xml
ui/android/gradle/wrapper/: gradle-wrapper.properties
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: firebase_options.dart  generated_plugin_registrant.dart  main.dart
ui/lib/components/: arguments_card.dart  auth_gate.dart  ballot_card.dart  fish_menu.dart  menu.dart  options_card.dart  statistic_card.dart  utils.dart
ui/lib/config/: client.dart
ui/lib/data/: gql_api.dart
ui/lib/screens/: dashboard.dart  editProfile.dart  joinSwarm.dart  login.dart  markdown_preview.dart  newArgument.dart  newBallot.dart  newDelegation.dart  newOption.dart  newSwarm.dart  signup.dart  viewArguments.dart  viewBallot.dart  viewProfile.dart
ui/lib/screens/tabs/dashboard/: ballots.dart
ui/linux/: CMakeLists.txt  my_application.cc
ui/test/: widget_test.dart
ui/web/: firebase-messaging-sw.js  index.html
(+5 files in other folders)
